# stm32g071gb

./: .gitignore  Cargo.toml  Embed.toml  memory.x  readMe.txt
.cargo/: config.toml
src/: main.rs
tests/: example.rs  fan_pwm.rs  fan_rpm.rs  oled.rs  tmp.rs  ups.rs
tests/success/: adc_ntc.rs  button.rs  button_dac.rs  oled_pwm.rs
